--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -90,6 +90,9 @@ textarea {
 * {
 	margin: 0; border: 0; padding: 0;
 }
+div.wrapper {position:relative; top:0; left:0;width:950px; margin:auto; text-align:center;
+}
+/*
 div.wrapper { 
     position: relative; 
     top: 0; 
@@ -97,7 +100,7 @@ div.wrapper {
     width: 904px; 
     margin: auto; 
 }
-/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
+* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
 (The key items are picked out in bold type.)
 equalise for various browsers and change #header to header*/
 
@@ -4246,6 +4249,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
