--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -92,15 +92,7 @@ textarea {
 }
 div.wrapper {position:relative; top:0; left:0;width:950px; margin:auto; text-align:center;
 }
-/*
-div.wrapper { 
-    position: relative; 
-    top: 0; 
-    left: 0; 
-    width: 904px; 
-    margin: auto; 
-}
-* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
+/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
 (The key items are picked out in bold type.)
 equalise for various browsers and change #header to header*/
 
@@ -4249,6 +4241,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
