--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -545,7 +545,7 @@ h1 { font-size:200%; color :white; position: relative; left:-150px; top: -10px; 
 }
 
 div#rosette { position:relative; left:750px; top:5px; }
-*/
+*
 div#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 904px; margin-top:0px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
@@ -595,12 +595,12 @@ div#html5style2footer { clear:both; color:maroon; text-align:center;
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css)
 (The key items are picked out in bold type.) */
 
-/*equalise for various browsers and change #header to header*/
+/*equalise for various browsers and change #header to header*
 div body header #content { margin:0; padding:0; border:0;
 }
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
 
@@ -4215,6 +4215,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
