--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1713,7 +1713,7 @@ html, button, input, select, textarea {
   font-family: sans-serif; }
 
 body {
-  margin: 0; }
+  margin: auto; }
 
 a:focus {
   outline: thin dotted; }
