--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -763,7 +763,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: #fff;
   text-align: var(--bs-body-text-align);
-  background-color: #07062f;
+  background-color: #;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
 }
