--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -2056,9 +2056,10 @@ header .header-inner h1 {
     visibility: visible !important; } }
 .lt-ie9 .show-nav {
   display: block; }
-
+/*
 nav {
   clear: both; }
+  */
   nav li {
     line-height: 2;
     text-align: center; }
