--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -86,7 +86,18 @@ textarea {
 @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans'; 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: black url(../../css/images/spinner.gif) no-repeat scroll center center;
+}
 
+#lightbox {
+  position: fixed;
+}
 * {
 	margin: 0; border: 0; padding: 0;
 }
@@ -4216,6 +4227,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
