--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -82,7 +82,7 @@ textarea {
 
 /* ==========================================================================
    Author's custom styles
-   ========================================================================== */
+   ========================================================================== *
 @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans'; 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
@@ -4227,6 +4227,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
