--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1914,7 +1914,7 @@ html, body {
 */
 .js .home {
   background: #000000; }
-
+/*
 header {
   padding-top: 14px;
   padding-top: 0.875rem;
@@ -1930,7 +1930,7 @@ header {
   z-index: 6060;
   width: 100%; 
   }
-  
+  */
   header h1 a {
     display: block; }
   .no-js header {
