--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -114,7 +114,7 @@ header#html5style2header {
   margin: 10px auto;
 }
 
-h1 {
+h1#html5style2h1 {
   font-size: 100%;
   color: white;
   position: relative;
