--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -129,7 +129,7 @@ h1#html5style2h1 {
   top: 5px;
 }
 
-##html5style2content {
+#html5style2content {
   background-color: transparent;
   border-left: 10px white solid;
   border-right: 10px white solid;
