--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -83,6 +83,9 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300');
+
 /*equalise for various browsers and change #header to header*/
 div body header #content {
   margin: 0;
@@ -4378,6 +4381,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
