--- a/style[1].css
+++ b/style[1].css
@@ -1,2 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
+*{ margin:0; padding: 0; box-sizing: border box;}
+html, body {height: 100%; background: FFF; text-align: center; font: 1.15em/1 'Open Sans', sans-serif; color: #FFF;}
+
