--- a/style[1].css
+++ b/style[1].css
@@ -2,4 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
 *{ margin:0; padding: 0; box-sizing: border box;}
 html, body {height: 100%; background: FFF; text-align: center; font: 1.15em/1 'Open Sans', sans-serif; color: #FFF;}
-
+.wrapper {background-color: #F5F5F5; height: 100%;}
+#header {background-color: #AFDED4;}
+.logo {padding: 2%;}
+img { max-width: 100%;}
+h2.dark {color: #34495E;}
