--- a/style[1].css
+++ b/style[1].css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
 *{ margin:0; padding: 0; box-sizing: border box;}
-html, body {height: 100%; background: FFF; text-align: center; font: 1.15em/1 'Open Sans', sans-serif; color: #FFF;}
-.wrapper {background-color: #F5F5F5; height: 100%;}
-#header {background-color: #AFDED4;}
-.logo {padding: 2%;}
+html, body { height: 100%; background: FFF; text-align: center; font: 1.15em/1 'Open Sans', sans-serif; color: #FFF;}
+.wrapper { background-color: #F5F5F5; height: 100%;}
+#header { background-color: #AFDED4;}
+.logo { padding: 2%;}
 img { max-width: 100%;}
-h2.dark {color: #34495E;}
-h2 {font: 300 2em /1 'Raleway', sans-serif; color: #FFF; padding: 2%; position: relative; top: 50%; transform: translateY(-50%);}
+h2.dark { color: #34495E;}
+h2 { font: 300 2em /1 'Raleway', sans-serif; color: #FFF; padding: 2%; position: relative; top: 50%; transform: translateY(-50%);}
+.social { list-style: none;}
+.social li { display: inline;}
+.social { font-size: 3em; margin: 1%; padding: 5%; color: #F6931E;}
+.social i:hover { color: #F6931E;}
+p { padding: 2%;}
