--- a/style[1].css
+++ b/style[1].css
@@ -22,7 +22,7 @@ p { padding: 2%;}
         font-size: 2em;
     }
 }
-@media all and (max-width: 768px){
+@media all and (min-width: 768px){
     .row {
         display: flex;
         margin: auto;
@@ -30,6 +30,32 @@ p { padding: 2%;}
     [class*="col-"]:last-child {
         margin: 0;
     }
-    .col-1 { flex: 1;
+    .col-1 { flex: 1;}
+    .col-2 { flex: 2;}
+    .col-3 { flex: 3;}
+    .col-4 { flex: 4;}
+    .col-5 { flex: 5;}
+    .col-6 { flex: 6;}
+    .col-7 { flex: 7;}
+    .col-10 { flex: 10;}
+    .col-11 { flex: 11;}
+    .col-12 { flex: 12;}
+    }
+@media all and (max-width: 768px){
+    .logo {
+        max-width: 185px;
+    }
+    h2 {
+        font-size: 1.25em;
+        padding: '9em';
+    }
+    .circle {
+        border-radius: 50%;
+        max-width: 40%;
+        padding: 5% 0;
     }
 }
+@media all and (max-width: 500px){
+    .social {
+        font-size: 1.5em;
+    }
