--- a/style[1].css
+++ b/style[1].css
@@ -7,7 +7,7 @@ html, body { height: 100%; background: FFF; text-align: center; font: 1.15em/1 '
 .logo { padding: 2%;}
 img { max-width: 100%;}
 h2.dark { color: #34495E;}
-h2 { font: 300 2em /1 'Raleway', sans-serif; color: #FFF; padding: 2%; /* position: relative;  top: 50%; transform: translateY(-50%); */}
+h2 { font: 300 2em /1 'Raleway', sans-serif; color: #FFF; padding: 2%; position: relative;  top: 50%; transform: translateY(-50%);}
 .social { list-style: none;}
 .social li { display: inline;}
 .social { font-size: 3em; margin: 1%; padding: 5%; color: #F6931E;}
