--- a/style[1].css
+++ b/style[1].css
@@ -47,7 +47,7 @@ header {
 
 h1 {
   font-size: 100%;
-  color: white;
+  color: blue;
   position: relative;
   left: 90px;
   top: -3px;
@@ -66,7 +66,7 @@ h1 {
   border-right: 10px white solid;
   border-bottom: 10px white solid;
   width: 904px;
-  margin-top: -310px;
+  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   padding: 8px;
@@ -76,13 +76,13 @@ h1 {
 
 h2 {
   font-size: x-large;
-  color: white;
+  color: blue;
   margin: 0 0 10px 0;
 }
 
 h3 {
   font-size: large;
-  color: white;
+  color: blue;
   margin: 0 0 6px 0;
 }
 
