--- a/style[1].css
+++ b/style[1].css
@@ -3,6 +3,7 @@
 *{ margin:0; padding: 0; box-sizing: border-box;}
 html, body { height: 100%; background: #FFF url(images/green-grad.jpg) repeat-x;  margin: auto; } /* text-align: center; font: 1.15em/1 'Open Sans', sans-serif; color: #FFF;} */
 .wrapper { background-color: #F5F5F5; height: 100%;}
+div.wrapper {position:relative; top:0; left:0;width:950px; margin:auto; text-align:center;}
 #header { background-color: #AFDED4;}
 .logo { padding: 2%;}
 img { max-width: 200%;}
