--- a/style[1].css
+++ b/style[1].css
@@ -37,7 +37,7 @@ nav {
 }
 
 /*remove the # from #header*/
-header {
+header#html5-style-2header {
   width: 920px;
   height: 180px;
   padding: 0;
