--- a/style[1].css
+++ b/style[1].css
@@ -6,7 +6,7 @@ html { height: 100%; text-align: center; font: 1.15em/1 'Open Sans', sans-serif;
 div.wrapper {position:relative; top:0; left:0;width:950px; margin:auto; text-align:center;}
 #header { background-color: #AFDED4;}
 .logo { padding: 2%;}
-img { max-width: 300%;}
+/* img { max-width: 300%;} */
 h2.dark { color: #34495E;}
 h2 { font: 300 2em /1 'Raleway', sans-serif; color: #FFF; padding: 2%; position: relative;  top: 50%; transform: translateY(-50%);}
 .social { list-style: none;}
