--- a/style[1].css
+++ b/style[1].css
@@ -90,7 +90,7 @@ h3 {
 div#leftcol {
   float: left;
   width: 310px;
-  vertical-align: top;
+  vertical-align: bottom;
 }
 
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
