--- a/style[1].css
+++ b/style[1].css
@@ -3,7 +3,7 @@
 *{ margin:0; padding: 0; box-sizing: border-box;}
 html { height: 100%; text-align: center; font: 1.15em/1 'Open Sans', sans-serif; color: #FFF;} */
 div.wrapper { background-color: #F5F5F5; height: 100%;};
-#header#html5style2header { background-color: #AFDED4;}
+header#html5style2header { background-color: #AFDED4;}
 .logo { padding: 2%;}
 img { max-width: 300%;} 
 h2.dark { color: #34495E;}
