--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1243,13 +1243,14 @@ h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+/*
 header {
   background: rgba(25, 25, 25, 0.95);
   transition: all 0.5s;
   z-index: 997;
   height: 70px;
 }
-
+*/
 header.fixed-top {
   background: #07062f;
 }
