--- a/style[1].css
+++ b/style[1].css
@@ -86,7 +86,7 @@ h3 {
   margin: 0 0 6px 0;
 }
 
-div#html5style2leftcolo {
+div#html5style2leftcol {
   float: left;
   width: 310px;
   vertical-align: bottom;
