--- a/style[1].css
+++ b/style[1].css
@@ -94,7 +94,7 @@ div#html5style2leftcol {
 
 /*#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*/
-div#html5style2headermidcol {
+div#html5style2midcol {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: -277px;
@@ -104,14 +104,14 @@ div#html5style2headermidcol {
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }*/
-nav ul {
+nav#html5style2nav ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
 }
 
 /*Set un-ordered list style within the menu block only. This removes bullets*/
-nav li {
+nav#html5style2nav li {
   list-style-type: none;
 }
 
