--- a/nav[1].css
+++ b/nav[1].css
@@ -138,7 +138,7 @@ body {
   #nav ul li:hover > ul {
     display: block !important;
   }
-  nav#html5style2nav label {
+  #nav label {
     display: none;
   }
 }
