--- a/nav[1].css
+++ b/nav[1].css
@@ -3,7 +3,7 @@ body {
   -webkit-animation: bugfix infinite 1s;
   /* needed for checkbox hack */
 }
-
+/*
 @-webkit-keyframes bugfix {
   from {
     padding: 0;
