--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -4221,7 +4221,7 @@ h3 { font-size:large; color:black; margin:0 0 6px 0;
 #html5style2midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
 /* set side menu block position and width*/
-nav#nav { margin:95px 9px 0 35px; width:950px; 
+nav#nav { margin:95px 9px 0 35px; width:100%; 
 }
 /*Set list style within the menu block only. This removes bullets*/
 nav li { list-style-type:none; 
