--- a/style.css
+++ b/style.css
@@ -9,6 +9,40 @@ div.wrapper {
     margin: auto; 
     /* text-align: center; */
 }
+
+#photos {
+  border: 1px solid #BEBEBE;
+  height: 400px;
+  overflow: hidden;
+  position: relative;
+  width: 400px;
+}
+
+#photos ul {
+  left: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  width: 2400px;
+}
+
+#photos li {
+  float: left;
+}
+
+#photos .trigger {
+  left: 0;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+  text-indent: -9999px;
+  height: 400px;
+  width: 400px;
+  display: block;
+}
+
 /* **************************************************************************** */
 /*equalise all the margins, paddings and borders built into various browsers* 
 div body header #content { margin:0; padding:0; border:0; 
