--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ div#html5style2container { position: relative;
     top: 10px; 
     left: 0; margin:auto; text-align:center; width:97%; min-width:800px; max-width:970px;
 }
-
+*/
 div#html5style2container { border: 10px solid rgba(000,000,000,.05);  background-clip: padding-box;
     margin: auto;
     text-align: center;
