--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -20,7 +20,7 @@
   line-height: 1.4;
 }
 
-/* === equalise for various browsers and change #header to header === */
+/* === equalise for various browsers and change #header to header === *
 div body header #content {
   margin: 0;
   padding: 0;
@@ -32,7 +32,7 @@ body {
   margin: auto;
 }
 
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header,
 footer,
 section,
@@ -41,7 +41,7 @@ nav {
   display: block;
 }
 
-/*remove the # from #header*/
+/*remove the # from #header*
 header {
   width: 920px;
   height: 180px;
@@ -99,7 +99,7 @@ h3 {
 }
 
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
-}*/
+}*
 #midcol {
   margin-left: 315px;
   margin-right: 145px;
@@ -107,28 +107,28 @@ h3 {
   vertical-align: top;
 }
 
-/*set nav block position and width*/
+/*set nav block position and width*
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
-}*/
+}*
 nav ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
 }
 
-/*Set un-ordered list style within the menu block only. This removes bullets*/
+/*Set un-ordered list style within the menu block only. This removes bullets*
 nav li {
   list-style-type: none;
 }
 
-/* set general side button styles */
+/* set general side button styles *
 li.btn {
   margin-bottom: 3px;
   text-align: center;
   width: 130px;
 }
 
-/* set general anchor styles and include the zoom fix for IE6*/
+/* set general anchor styles and include the zoom fix for IE6*
 li.btn a {
   display: block;
   color: white;
@@ -138,7 +138,7 @@ li.btn a {
 }
 
 /* specify mouse state styles */
-/* mouseout (default) */
+/* mouseout (default) *
 li.btn a {
   background: #559a55;
   color: white;
@@ -146,14 +146,14 @@ li.btn a {
   padding-bottom: 3px;
 }
 
-/* mouseover */
+/* mouseover *
 li.btn a:hover {
   background: red;
   color: white;
   border: 5px outset red;
 }
 
-/*mouse active*/
+/*mouse active*
 li.btn a:active {
   background: maroon;
   border: 5px inset maroon;
@@ -4542,6 +4542,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
