--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -24,16 +24,16 @@ a {
 #container{
 	margin:0 auto;
 	text-align: left;
-	width: 650px;
+	width: 970px;
 }
 
-#header{
+#html5style2header{
 	height: 60px;
 	color: #172322;
 	background: transparent url(../images/header-corners.png) no-repeat bottom left;
 }
 
-#header h1
+#html5style2header h1
 {
 	padding:0;
 	margin:0;
