--- a/style[1].css
+++ b/style[1].css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
 *{ margin:0; padding: 0; box-sizing: border-box;}
 html { height: 100%; text-align: center; font: 1.15em/1 'Open Sans', sans-serif; color: #FFF;} */
+div.wrapper {position:relative; top:0px; left:0;width:100%; margin:auto; text-align:center;
+}
 div.wrapper { background-color: #F5F5F5; height: 100%;};
 header#html5style2header { background-color: #AFDED4;}
 .logo { padding: 2%;}
