--- a/style[1].css
+++ b/style[1].css
@@ -180,7 +180,7 @@ footer {
 @media all and (min-width: 768px){
     .row {
         display: flex;
-        -ms-flex-direction: column;
+        -ms-flex-direction: row;
         margin: auto;
     }
     [class*="col-"]:last-child {
