--- a/style[1].css
+++ b/style[1].css
@@ -4,7 +4,8 @@
 html { height: 100%; text-align: center; font: 1.15em/1 'Open Sans', sans-serif; color: #FFF;} */
 div.wrapper {position:relative; top:0px; left:0;width:100%; margin:auto; text-align:center;
 }
-div.wrapper { background-color: #F5F5F5; height: 100%;};
+div.wrapper {position:relative; top:0px; left:0;width:100%; margin:auto; text-align:center;
+}
 header#html5style2header { background-color: #AFDED4;}
 .logo { padding: 2%;}
 img { max-width: 300%;} 
