--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -42,7 +42,7 @@ nav {
 }
 
 /*remove the # from #header*/
-header {
+#html5style2header {
   width: 920px;
   height: 180px;
   padding: 0;
@@ -51,7 +51,7 @@ header {
   margin: 10px auto;
 }
 
-h1 {
+#html5style2h1 {
   font-size: 100%;
   color: white;
   position: relative;
@@ -60,13 +60,13 @@ h1 {
   width: 480px;
 }
 
-#rosette {
+##html5style2rosette {
   position: relative;
   left: 750px;
   top: 5px;
 }
 
-#content {
+##html5style2content {
   background-color: transparent;
   border-left: 10px white solid;
   border-right: 10px white solid;
@@ -80,13 +80,13 @@ h1 {
   color: maroon;
 }
 
-h2 {
+#html5style2h2 {
   font-size: x-large;
   color: white;
   margin: 0 0 10px 0;
 }
 
-h3 {
+#html5style2h3 {
   font-size: large;
   color: white;
   margin: 0 0 6px 0;
@@ -100,7 +100,7 @@ h3 {
 
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;*/
 }*
-#midcol {
+#html5style2midcol {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: 10px;
@@ -108,16 +108,16 @@ h3 {
 }
 
 /*set nav block position and width*/
-nav { margin:10px 30px 0 10px; width:135px; float:right; 
+#html5style2nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }*
-nav ul {
+#html5style2nav ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
 }
 
 /*Set un-ordered list style within the menu block only. This removes bullets*/
-nav li {
+#html5style2nav li {
   list-style-type: none;
 }
 
@@ -163,11 +163,11 @@ br.clear {
   clear: both;
 }
 
-#midcol img {
+#html5style2midcol img {
   margin-left: 10px;
 }
 
-footer {
+#html5style2footer {
   clear: both;
   color: maroon;
   text-align: center;
@@ -4542,6 +4542,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
