--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -9,7 +9,7 @@
 body {
 	font-family: "Lucida Sans Unicode","Lucida Grande",Sans-Serif;
 	color: #3E3E3E;
-	background: #94C5EB url(../orris0/css-jq/images/background-grad.png) repeat-x;
+	background: #94C5EB url(./css-jq/images/background-grad.png) repeat-x;
 	font-size: 12px;
 }
 */
@@ -30,7 +30,7 @@ a {
 #html5style2header{
 	height: 60px;
 	color: #172322;
-	background: transparent url(../images/header-corners.png) no-repeat bottom left;
+	background: transparent url(./images/header-corners.png) no-repeat bottom left;
 }
 
 #html5style2header h1
@@ -39,19 +39,19 @@ a {
 	margin:0;
 }
 
-#content{
+#html5style2content{
 	background-color: #fff;
 	padding: 0 15px 10px 15px;
 
 } 
 
-#footer{
+#html5style2footer{
 	background-color: #fff;
 	padding:15px;
   clear: both;
 }
 
-h2 {
+#html5style2h2 {
 	border-bottom:2px solid #015287;
 	color: #D15600;
 	padding-top: 10px;
