--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -50,7 +50,7 @@ header#html5style2header.row.data {
   margin: 10px auto;
 }
 /*remove the # from #header*/
-#html5style2header {
+#html5style2header.data {
   width: 920px;
   height: 180px;
   padding: 0;
@@ -108,7 +108,7 @@ div#html5style2content.data {
 
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;*/
 }*
-#html5style2midcol {
+div#html5style2midcol.data {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: 10px;
@@ -116,16 +116,16 @@ div#html5style2content.data {
 }
 
 /*set nav block position and width*/
-#html5style2nav { margin:10px 30px 0 10px; width:135px; float:right; 
+nav#html5style2nav.data { margin:10px 30px 0 10px; width:135px; float:right; 
 }*
-#html5style2nav ul {
+nav#html5style2nav.data ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
 }
 
 /*Set un-ordered list style within the menu block only. This removes bullets*/
-#html5style2nav li {
+nav#html5style2nav.data li {
   list-style-type: none;
 }
 
@@ -4550,6 +4550,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
