--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -527,9 +527,9 @@ nav#gallerypagenav.data { float:left; margin-left:10px; width:115px;
 nav#gallerypagenav.data ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-div#gallerypagerightcol { width: 150px; float:right; text-align:center;
+div#gallerypagerightcol.datd { width: 150px; float:right; text-align:center;
 }
-div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
+div#gallerypagerightcol.data p.advert {font-size:small; margin-top:190px;
 }
 /*set middle column for main content*/
 div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
