--- a/style[1].css
+++ b/style[1].css
@@ -39,7 +39,7 @@ nav {
 }
 
 /*remove the # from #header*/
-header#html5style2header.row {
+header#html5style2header.data {
   width: 920px;
   height: 180px;
   padding: 0;
@@ -63,7 +63,7 @@ h1#html5style2h1 {
   top: 5px;
 }
 
-div#html5style2content {
+div#html5style2content.data {
   background-color: transparent;
   border-left: 10px white solid;
   border-right: 10px white solid;
@@ -77,13 +77,13 @@ div#html5style2content {
   color: maroon;
 }
 
-h2 {
+h2#html5style2h2 {
   font-size: x-large;
   color: blue;
   margin: 0 0 10px 0;
 }
 
-h3 {
+h3#html5style2h3 {
   font-size: large;
   color: blue;
   margin: 0 0 6px 0;
@@ -160,11 +160,11 @@ br.clear {
   clear: both;
 }
 
-#midcol img {
+#html5style2midcol img {
   margin-left: 10px;
 }
 
-footer {
+footer#html5style2footer {
   clear: both;
   color: maroon;
   text-align: center;
