--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -527,7 +527,7 @@ nav#gallerypagenav.data { float:left; margin-left:10px; width:115px;
 nav#gallerypagenav.data ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-div#gallerypagerightcol.datd { width: 150px; float:right; text-align:center;
+div#gallerypagerightcol.data { width: 150px; float:right; text-align:center;
 }
 div#gallerypagerightcol.data p.advert {font-size:small; margin-top:190px;
 }
@@ -4550,6 +4550,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
