--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1089,7 +1089,7 @@ body {
   color: #444444;
 }
 body {
-  margin: 0;
+  margin: auto;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
