--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1268,7 +1268,7 @@ header.fixed-top {
 
 header .logo {
   font-size: 30px;
-  margin-top: -240px;
+  margin-top: -14em;
   padding: 0;
   line-height: 1;
   font-weight: 700;
