--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -264,7 +264,7 @@ header.fixed-top {
 
 header .logo {
   font-size: 30px;
-  margin-top: -14em;
+  margin-top: -410px;
   padding: 0;
   line-height: 1;
   font-weight: 700;
