--- a/style[1].css
+++ b/style[1].css
@@ -129,8 +129,8 @@ header#html5style2header.data {
 }
 
 h1#html5style2h1 {
-  font-size: 100%;
-  color: blue;
+  font-size: 300%;
+  color: white;
   position: relative;
   left: 90px;
   top: -3px;
