Update background image path in gallery CSS

--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -417,7 +417,7 @@ header#html5style2header {
     height: 180px;
     border: 10px white solid;
     padding: 10px;
-    background-image: url("../bda-20.jpg");
+    background-image: url("./bda-20.jpg");
     background-repeat: no-repeat;
     background-position: bottom;
     margin: 10px auto;
