--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -165,7 +165,7 @@ set the gallery block 10px further to the right
 
 
 
-/*set attributes for consistent appearance in all browsers*
+/*set attributes for consistent appearance in all browsers*/
 div.wrapper { 
     position: relative;
     top: 4.5em;
